updated ability to use 32-bit encoding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(extract_ms)
 export(getBIC)
 export(getEIC_from_peaklist)
 export(getTIC)
+export(get_float)
 export(get_peak_scans)
 export(get_ums)
 export(getbaseion)
